adds c-14 favorite artists

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Message to Drake 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    Message to Drake 
+    <main>
+        <div>
+            <h1>favorite Artist of c-14</h1>
+                <ul>
+                    <li>beyonce</li>
+                    <li>maluma</li>
+                    <li>lana del rey</li>
+                </ul>
+        </div>
+    </main>
+</body>
+</html>
